--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+* {
+    background: #0C0C26;
+}
+.app-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.body {
+    width: 400px;
+    height: 400px;
+    margin-top: 30px;
+    border: 3px solid #78E2EE;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.number {
+    width: 320px;
+    height: 200px;
+    border: 2px solid #78E2EE;
+    border-radius: 5px;
+    font-size: 120px;
+    color: #78E2EE;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+.countMax{
+    width: 320px;
+    height: 200px;
+    border: 2px solid #78E2EE;
+    border-radius: 5px;
+    font-size: 120px;
+    color: red;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.control {
+    width: 320px;
+    height: 50px;
+    border: 2px solid #78E2EE;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+    width: 90px;
+    text-align: center;
+    color: #78E2EE;
+    border: 2px solid #78E2EE;
+    border-radius: 5px;
+    font-size: 24px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.red {
+    width: 90px;
+    border: 2px solid #f14848;
+    border-radius: 5px;
+    font-size: 24px;
+    color: #f14848;
+    text-align: center;
+    padding: 5px;
+}
+.disabled{
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+.settings{
+    width: 400px;
+    height: 400px;
+    margin-top: 30px;
+    border: 3px solid #78E2EE;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.label {
+    margin-right: 20px;
+    font-size: 28px;
+    color:#78E2EE;
+    padding: 6px;
+}
+.value{
+    width: 320px;
+    height: 200px;
+    border: 2px solid #78E2EE;
+    border-radius: 5px;
+    color: #78E2EE;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px
+}
+.input {
+    padding: 8px;
+    border: 1px solid #78E2EE;
+    border-radius: 4px;
+    font-size: 20px;
+    width: 150px;
+    transition: border-color 0.3s ease;
+    color: #78E2EE;
+    margin: 6px;
+}
+.invalid {
+    padding: 8px;
+    border-radius: 4px;
+    font-size: 20px;
+    width: 150px;
+    transition: border-color 0.3s ease;
+    margin: 6px;
+    border-color:#f14848;
+    color: #f14848;
+}
+.error{
+    color: white;
+    font-size: 24px;
 }
